Fixed alignment issues on About Page.

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -120,26 +120,22 @@ h3 { /* Projects Headings */
 }
 
 .intro-container {
-    margin-bottom: 180px;
     text-align: center;
     font-family: Typola;
-    font-size: 20px;
+    font-size: 1.25rem;
+    margin-bottom: 12.5rem;
     width: 100%;
-    height: 400px;
+    height: 25rem;
 }
 
 .intro-container-about {
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
-    width: 50%;
-    height: 100px;
     line-height: 1.5;
-    /* position: absolute; */
     margin: 0 auto;
-    /* left: 400px; */
-    margin-top: 0;
-    margin-bottom: 200px;
+    width: 50%;
+    height: 6.25rem;
 }
 
 .avatar-pic {
@@ -150,27 +146,25 @@ h3 { /* Projects Headings */
 
 .skills-container {
     font-family: Typola;
-    font-size: 20px;
-    margin-top: 50px;
-    margin-bottom: 50px;
+    font-size: 1.25rem;
     text-align: center;
-    height: 500px;
+    margin-bottom: 12.5rem;
+    height: 25rem;
     width: 100%;
 }
 
 .skills-container-about {
-    color: black;
-    width: 500px;
-    height: 100px;
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
     line-height: 1.5;
-    position: absolute;
-    left: 400px;
-    margin-top: 10px;
-    margin-bottom: 200px;
+    margin: 0 auto;
+    width: 50%;
+    height: 100px;  
 }
 
 .icon-container {
-    margin-top: 90px;
+    margin: 0 auto;
 }
 
 .icon-size {
@@ -185,20 +179,18 @@ h3 { /* Projects Headings */
     font-family: Typola;
     font-size: 20px;
     text-align: center;
-    height: 100px;
+    height: 25rem;
     width: 100%;
-    position: absolute;
-    margin-top: 10px;
 }
 
 .contact-container-about {
-    color: black;
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
     line-height: 1.5;
-    position: absolute;
-    width: 500px;
+    margin: 0 auto;
+    width: 50%;
     height: 100px;
-    margin-left: 400px;
-    margin-top: 20px;
 }
 
 .footer {
@@ -210,7 +202,6 @@ h3 { /* Projects Headings */
     color: black;
     height: 50px;
     width: 100%;
-    top: 400px;
     bottom: 0;
     padding-top: 10px;
 }
@@ -229,7 +220,6 @@ h3 { /* Projects Headings */
     font-family: Typola;
     font-size: 20px;
     text-align: center;
-    color: black;
     line-height: 1.5;
     width: 50%;
     height: 100px;
@@ -238,9 +228,8 @@ h3 { /* Projects Headings */
 
 .projects-about-container {
     font-family: Typola;
-    font-size: 20px;
+    font-size: 1.25rem;
     text-align: center;
-    color: black;
     line-height: 1.5;
     position: absolute;
     width: 500px;
@@ -262,14 +251,16 @@ h3 { /* Projects Headings */
 
 .resume-container {
     position: relative;
-    margin-bottom: -200px;
+    margin-bottom: 50px;
 }
 
 .resume-view {
-    margin-top: 30px;
-    margin-left: 250px;
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    margin: 0 auto;
     height: 1050px;
-    width: 800px;
+    width: 60%;
 }
 
 /*Id Selectors*/
@@ -287,9 +278,10 @@ h3 { /* Projects Headings */
 }
 
 #contact-button {
-    position: absolute;
-    margin-top: 120px;
-    right: 580px;
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    margin: 0 auto;
 }
 
 .testing-class {
